== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== fixes

=== added

=== changed

== 3.2.1 - 2024-01-10

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1330[#1330: Publish to confluence gives response 400 on version 3.2.0]

=== added
* https://github.com/docToolchain/docToolchain/issues/1327[#1327: Allow use of enhanced docker image]
* new task `wipeConfluenceSpace` to delete all pages of a space

=== changed

== 3.2.0 - 2023-12-20

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1307[#1307: powershell: problem to find local installed jdk]
* https://github.com/docToolchain/docToolchain/issues/1300[#1300: publishToConfluence:Cannot handle embedded SVG images]
* https://github.com/docToolchain/docToolchain/issues/1253[#1253: publishToConfluence removes all linebreaks from code]

=== added

=== changed

* https://github.com/docToolchain/docToolchain/issues/1231[#1231: docker: port mapping only needed for previewSite]
* https://github.com/docToolchain/docToolchain/issues/1309[#1309: deprecate previewSite task]
* https://github.com/docToolchain/docToolchain/issues/1292[#1292: remove http builder and httpmime]

== 3.1.2 - 2023-11-16

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1291[#1291: publishToConfluence - Images not found]
* https://github.com/docToolchain/docToolchain/issues/1293[#1293: Explicit dependency required between generateHTML and htmlSanityCheck]

=== added

=== changed

* The Confluence API configuration is now aware of contexts and hides the API version specific settings.

== 3.1.1 - 2023-11-07

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1281[#1281: publishToConfluence throws exception when uploading attachments in v3.1.0]